Rename index.js --> homepage.js

--- a/codelab-final-state/public/index.html
+++ b/codelab-final-state/public/index.html
@@ -42,7 +42,7 @@ limitations under the License. -->
     <script src="https://redom.js.org/redom.min.js"></script>
 
     <script type="module">
-      import { onDocumentReady } from "./js/index.js";
+      import { onDocumentReady } from "./js/homepage.js";
       document.addEventListener("DOMContentLoaded", function() {
         const app = firebase.app();
         onDocumentReady(app);
