--- a/codelab-final-state/public/index.html
+++ b/codelab-final-state/public/index.html
@@ -33,9 +33,9 @@ limitations under the License. -->
     />
     <link rel="stylesheet" href="index.css" />
 
-    <script src="/__/firebase/8.2.10/firebase-app.js"></script>
-    <script src="/__/firebase/8.2.10/firebase-auth.js"></script>
-    <script src="/__/firebase/8.2.10/firebase-firestore.js"></script>
+    <script src="/__/firebase/9.14.0/firebase-app-compat.js"></script>
+    <script src="/__/firebase/9.14.0/firebase-auth-compat.js"></script>
+    <script src="/__/firebase/9.14.0/firebase-firestore-compat.js"></script>
     <script src="/__/firebase/init.js"></script>
 
     <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
